--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <script src="js/main.js"></script>
+  <script src="js/particle.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
 
