Finished visual animation of particles

--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
 </head>
 <body onload="init()">
   <canvas id="c">Your browser does not support canvas</canvas>
+
+  <main class="text">
+
+
+      
+  </main>
+
 </body>
 </html>
