Calculationg approximate pi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 
-  <title>Document</title>
+  <title>Approximation PI</title>
 </head>
 <body onload="init()">
   <canvas id="c">Your browser does not support canvas</canvas>
@@ -18,7 +18,7 @@
   <main class="text">
 
 
-      
+
   </main>
 
 </body>
